Implemented caching and added few validations is registration page